@@ -1,0 +1,8 @@
+import QtQuick 1.1
+
+QtObject {
+    property real x: 0
+    property real y: 0
+    property string operation: ""
+    property bool performed: false
+}
