@@ -7,6 +7,7 @@ Some more history can be devised from git sources (although even there, the thin
 15.12.2011:
  - trim Map_tst3 background
  - fix units mixing orders
+ - add order queues
 
 14.12.2011:
  - add Map_tst3 and Scnario_tst3
